--- a/kernel-3.18/drivers/input/touchscreen/mediatek/Makefile
+++ b/kernel-3.18/drivers/input/touchscreen/mediatek/Makefile
@@ -20,19 +20,19 @@ obj-$(CONFIG_TOUCHSCREEN_MTK_GT928)	+=  GT928/
 obj-$(CONFIG_TOUCHSCREEN_MTK_GT9XX_HOTKNOT_SCP)	+=  GT9XX_hotknot_scp/
 obj-$(CONFIG_TOUCHSCREEN_MTK_GT911)	+=  GT911/
 obj-$(CONFIG_TOUCHSCREEN_MTK_FT5X0X)	+=  ft5x0x/
-obj-$(CONFIG_WTK_MSG2238_X2605)	+=  msg2238_x2605/
-obj-$(CONFIG_WTK_MSG2238_X2605_s4)	+=  msg2238_x2605_s4/
-obj-$(CONFIG_WTK_MSG2238_X5623)	+=  msg2238_x5623/
-obj-$(CONFIG_WTK_MSG2238_X5057)	+=  msg2238_x5057/
-obj-$(CONFIG_WTK_FT6336_S3619)	+=  ft6336_s3619/
-obj-$(CONFIG_WTK_GT9XX_HOTKNOT_X5613)	+=gt9xx_hotknot_x5613/
-obj-$(CONFIG_WTK_GT9XX_HOTKNOT_X5618)	+=gt9xx_hotknot_x5618/
-obj-$(CONFIG_WTK_GT9XX_HOTKNOT_M6010)	+=gt9xx_hotknot_m6010/
-obj-$(CONFIG_WTK_GT9XX_HOTKNOT_X5602)	+=gt9xx_hotknot_x5602/
-obj-$(CONFIG_WTK_FT6336_X2605)	+=  ft6336_x2605/
+#obj-$(CONFIG_WTK_MSG2238_X2605)	+=  msg2238_x2605/
+#obj-$(CONFIG_WTK_MSG2238_X2605_s4)	+=  msg2238_x2605_s4/
+#obj-$(CONFIG_WTK_MSG2238_X5623)	+=  msg2238_x5623/
+#obj-$(CONFIG_WTK_MSG2238_X5057)	+=  msg2238_x5057/
+#obj-$(CONFIG_WTK_FT6336_S3619)	+=  ft6336_s3619/
+#obj-$(CONFIG_WTK_GT9XX_HOTKNOT_X5613)	+=gt9xx_hotknot_x5613/
+#obj-$(CONFIG_WTK_GT9XX_HOTKNOT_X5618)	+=gt9xx_hotknot_x5618/
+#obj-$(CONFIG_WTK_GT9XX_HOTKNOT_M6010)	+=gt9xx_hotknot_m6010/
+#obj-$(CONFIG_WTK_GT9XX_HOTKNOT_X5602)	+=gt9xx_hotknot_x5602/
+#obj-$(CONFIG_WTK_FT6336_X2605)	+=  ft6336_x2605/
 obj-$(CONFIG_WTK_GT5668_X5623)	+=  GT5668/
 obj-$(CONFIG_WTK_GT5668_X6068)	+=  GT5668_X6068/
-obj-$(CONFIG_WTK_GT5668_X6069)	+=  GT5668_X6069/
-obj-$(CONFIG_WTK_GT9XX_HOTKNOT_X5057)	+=gt9xx_hotknot_x5057/
-obj-$(CONFIG_WTK_GT9XX_HOTKNOT_X6069)	+=gt9xx_hotknot_x6069/
-obj-$(CONFIG_WTK_GSL1691_X5623)	+=gsl1691_x5623/
+#obj-$(CONFIG_WTK_GT5668_X6069)	+=  GT5668_X6069/
+#obj-$(CONFIG_WTK_GT9XX_HOTKNOT_X5057)	+=gt9xx_hotknot_x5057/
+#obj-$(CONFIG_WTK_GT9XX_HOTKNOT_X6069)	+=gt9xx_hotknot_x6069/
+#obj-$(CONFIG_WTK_GSL1691_X5623)	+=gsl1691_x5623/
