Removed make call to drivers not included

--- a/kernel-3.18/drivers/misc/mediatek/fingerprint/Makefile
+++ b/kernel-3.18/drivers/misc/mediatek/fingerprint/Makefile
@@ -1,7 +1,7 @@
 
 obj-$(CONFIG_WTK_FINGERPRINT_SLSPI) += slspi/
 
-obj-$(CONFIG_WTK_FINGERPRINT_GF510) += gf510/
+#obj-$(CONFIG_WTK_FINGERPRINT_GF510) += gf510/
 
 obj-$(CONFIG_WTK_FINGERPRINT_GF66XX) += gf66xx/
 
